--- a/header_dur.tex
+++ b/header_dur.tex
@@ -4,3 +4,5 @@
 \usepackage{caption}
 \captionsetup[table]{labelformat=default, labelsep=colon, name=Tabla}
 \captionsetup[figure]{labelformat=default, labelsep=colon, name=Figura}
+\usepackage[bottom]{footmisc}
+\renewcommand{\footnoterule}{}
