Terminar de revisar tablas,llegué hasta verificación de supuestos, quedaría ver razones de hazard, IC, y el anexo

--- a/header_dur.tex
+++ b/header_dur.tex
@@ -6,3 +6,4 @@
 \captionsetup[figure]{labelformat=default, labelsep=colon, name=Figura}
 \usepackage[bottom]{footmisc}
 \renewcommand{\footnoterule}{}
+\raggedbottom
