--- a/header_dur.tex
+++ b/header_dur.tex
@@ -6,4 +6,4 @@
 \captionsetup[figure]{labelformat=default, labelsep=colon, name=Figura}
 \usepackage[bottom]{footmisc}
 \renewcommand{\footnoterule}{}
-\raggedbottom
+\usepackage{microtype}
